# stickyvar

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yml  release-please.yml
src/: main.rs  nu.rs  sh.rs  shells.rs
