[package]
name = "stickyvar"
version = "0.1.3"
description = "Create permanent-ish environment variables that you can share between sessions"
repository = "https://github.com/ysthakur/stickyvar"
homepage = "https://github.com/ysthakur/stickyvar"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
rusqlite = { version = "0.37", features = ["bundled", "time"] }
time = "0.3" # Chose this over chrono and jiff solely because of the smaller binary size
urlencoding = "2.1.3"
